# tjuptattendance

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  _config.yml  build.rs  config_template.toml
.github/workflows/: release_pub.yml
assets/: icon.rc
src/: main.rs
src/libs/: bot.rs  cliparser.rs  command.rs  config.rs  email_bot.rs  mod.rs  picparser.rs
