[package]
name = "tjuptatt"
version = "1.1.3"
edition = "2021"
description = "TJUPT Attendance"
default-run = "tjuptatt"
readme = "README.md"
authors = ["AzureQAQ <azureqaq@gmail.com>"]
license = "Apache-2.0"
keywords = ["cli", "bin"]
categories = ["command-line-utilities"]
build =  "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libs"
path = "./src/libs/mod.rs"


[dependencies]
log = "0.4.17"
anyhow = "1.0.65"
simple_logger = { version = "4.0.0", default-features = false, features = ["colors"] }
tokio = { version = "1.21.0", features = ["rt-multi-thread", "macros", "parking_lot"], default-features = false }
clap = {version = "4.0.10", features = ["wrap_help", "std", "color", "cargo", "suggestions"], default-features = false }
serde = {version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
ahash = { version = "0.8.0", features = ["std", "serde"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.12", features = ["cookies", "json"] }
reqwest_cookie_store = "0.5.0"
platform-dirs = "0.3.0"
scraper = "0.14.0"
bytes = "1.3.0"
dssim = { version = "3.2", default-features = false }
load_image = "3.0.1"
imgref = "1.9.4"

[dependencies.lettre]
version = "0.10"
features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "pool", "hostname", "builder"]
default-features = false

[dependencies.image]
version = "0.24.5"
default-features = false
features = ["jpeg", "png"]

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dev-dependencies]
pretty_assertions = "1.3.0"

[build-dependencies]
embed-resource =  "1"
